--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Duskwitness Blog
 
 # Short bio or description (displayed in the header)
-description: Lets talk about game development
+description: Let's talk about game development
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
